...
    for (var i = 0; i < toCheck.length; i++) {
      if (this.checkNULL(toCheck[i]) || this.checkEmpty(toCheck[i])) {
        Alert.alert("One of the fields must not be NULL or empty");
        return;
      }
...
          this.props.hardWorkingPrefChange(this.state.tmpHardWorkingPref);

          Alert.alert("Updated successfully!");
          /* Render the Profile view again */
          this.unrenderUserform();
...
        <View style={{ flex: 1, backgroundColor: "#f3f3f3" }}>
          {
            <SafeAreaView testID="profileView">
              <ScrollView
                testID="profileScrollView"
                refreshControl={
                  <RefreshControl
                    testID="profileRefresh"
                    refreshing={this.state.refreshing}
                    onRefresh={this._onRefresh}
...
            </SafeAreaView>
          }
          <ActionButton testID="profileMainButton" buttonColor="crimson">
            <ActionButton.Item
              testID="profileChangeProfile"
              buttonColor="mediumspringgreen"
              title="Change Profile"
...
            </ActionButton.Item>
            <ActionButton.Item
              testID="profileSignOut"
              buttonColor="red"
              title="Sign Out"
              onPress={() => {
                Alert.alert("Signing out");
                this.signOut();
              }}>
...
    } else {
      return (
        <SafeAreaView testID="profileChangeProfileView" style={styles.safeContainer}>
          <View style={styles.navBar}>
            <Text style={styles.navBarTitle}>Edit profile</Text>
...

          <ScrollView
            testID="profileChangeProfileScrollView"
            style={styles.scroll}
            contentContainerStyle={styles.contentContainer}
...
            <View style={styles.inputContainer}>
              <TextField
                testID="profileNameInput"
                label="Name: "
                value={this.props.name}
...

              <TextField
                testID="profilePasswordInput"
                label="Password: "
                value={this.props.password}
...

              <TextField
                testID="profileYearLevelInput"
                label="Year level: "
                value={this.props.yearLevel}
...

              <TextField
                testID="profileSexInput"
                label="Sex:"
                value={this.props.sex}
...

              <TextField
                testID="profileEmailInput"
                label="Email: "
                value={this.props.email}
...

              <TextField
                testID="profileCoursesInput"
                label="Courses: "
                value={this.props.courses}
...
            <View style={styles.inputContainer}>
              <TextField
                testID="signUpSexInput"
                label="Sex: "
                value={this.props.sexPref}
...

              <TextField
                testID="signUpYearLevelInput"
                label="Year level: "
                value={this.props.yearLevelPref}
...

              <TextField
                testID="signUpCoursesInput"
                label="Courses: "
                value={this.props.coursesPref}
...

              <TextButton
                testID="profileChangeButton"
                style={{ margin: 4 }}
                titleColor="white"
...

              <TextButton
                testID="profileChangeGoBack"
                style={{ margin: 4 }}
                titleColor="#4286f4"
...
