...
    };
  }

  render() {
    if (!this.state.signUp) {
      return (
        <SafeAreaView testID="loginView" style={styles.safeContainer}>
        <ImageBackground source={require('./pic/app.jpg')} style={{width: '100%', height: '100%'}}>
        	<ScrollView
                    style={styles.scroll}
                    contentContainerStyle={styles.contentContainer}
                    keyboardShouldPersistTaps="handled">
                    <View style={styles.inputContainer2}>
                      <TextField
                        testID="userIDInput"
        		textColor="white"
                        label="User ID: "
        		baseColor="rgba(255,255,255,0.5)"
                characterRestriction={10}
                clearTextOnFocus={true}
                keyboardType='number-pad'
                onChangeText={(data) => this.props.userIDChange(data)}
              />

              <TextField
                testID="passwordInput"
                label="Password: "
                textColor="white"
                clearTextOnFocus={true}
		            baseColor="rgba(255,255,255,0.5)"
                secureTextEntry={this.state.loginSecureTextEntry}
                renderRightAccessory={this.loginRenderPasswordAccessory()}
...
              flexDirection: "column",
              flex: 1,
              alignItems: "stretch",
              justifyContent: "center",
            }}>
              <TextButton
                testID="signInButton"
                style={{
                  marginVertical: 10,
                  marginHorizontal: 50,
                  borderRadius: 20,
               }}
               titleColor="rgb(19,69,205)"
               color="rgba(255,255,255,0.6)"
               title="Sign In"
               onPress={() => this.signIn()}
             />
             <TextButton
               testID="signUpButton"
               style={{
                 marginVertical: 10,
                 marginHorizontal: 50,
                 paddingVertical:5,
                 borderRadius: 20,
               }}
...
             </ScrollView>
             </ImageBackground>
        </SafeAreaView>
      );
    } else {
      return (
        <SafeAreaView testID="signUpView" style={styles.safeContainer}>
          <View style={styles.navBar}>
            <Text style={styles.navBarTitle}>Sign up</Text>
          </View>
          <ScrollView
            testID="signUpScrollView"
            style={styles.scroll}
            contentContainerStyle={styles.contentContainer}
            keyboardShouldPersistTaps="handled">
            <View style={styles.safeContainer}>
              <Text style={{ fontSize: 18, flex: 1, margin: 8, textDecorationLine: "underline" }}>Basic info:</Text>
            </View>
            <View style={styles.inputContainer}>
              <TextField
                testID="signUpUserIDInput"
                label="User ID: "
                characterRestriction={10}
                clearTextOnFocus={true}
                keyboardType='number-pad'
                onChangeText={(data) => this.setState({ tmpUserID: data })}
              />

              <TextField
                testID="signUpPasswordInput"
                label="Password: "
                clearTextOnFocus={true}
                characterRestriction={20}
                secureTextEntry={this.state.loginSecureTextEntry}
                renderRightAccessory={this.loginRenderPasswordAccessory()}
                onChangeText={(data) => this.setState({ tmpPassword: data })}
              />

              <TextField
                testID="signUpNameInput"
                label="Name: "
                clearTextOnFocus={true}
                characterRestriction={30}
                onChangeText={(data) => this.setState({ tmpName: data })}
              />

              <TextField
                testID="signUpEmailInput"
                label="Email: "
                clearTextOnFocus={true}
                characterRestriction={50}
                onChangeText={(data) => this.setState({ tmpEmail: data })}
              />

...
              lexDirection: "column",
              flex: 1,
              alignItems: "stretch",
              justifyContent: "center",
            }}>
              <TextButton
                testID="sendSignUpRequestButton"
                style={{ margin: 4 }}
                titleColor="white"
                color="#4286f4"
                title="sign up"
                onPress={() => this.signUp()}
              />
              <TextButton
                testID="signUpGoBackButton"
                style={{ margin: 4 }}
                titleColor="#4286f4"
                color="rgba(0, 0, 0, .05)"
                title="go back"
                onPress={() => this.unrenderSignUpForm()}
              />
...
          })
            .then((response) => response.json())
            .then((responseJson) => {
              /* Then check if the data got from database matches the password typed */
              if (typeof responseJson !== "undefined" && typeof responseJson[0] !== "undefined"
                && responseJson[0].password === this.props.password) {
                Alert.alert("Signed in successfully!", "If you are signing in via Facebook, please remember to update your information and preferences in Profile -> Modify Profile for matching uses");
                /* Do the Initialize sequence after signing in successfully */
                this.initSequence();
                this.props.logVisibleChange();
              } else {
                Alert.alert("Incorrect user ID or password!");
                return;
...
