...
            color: this.state.tmpColor,
            description: this.state.tmpSubject,
            subject: this.state.tmpSubject,
            location: this.state.tmpLocation
          };
          this.props.scheduleArrayAdd(tmp);
          Alert.alert("Added schedule successfully!");
          this.unrenderUserform();
        }
      });
  }

  /* Helper functions that check whether or not any fields are NULL/empty */
...

  render() {
    if (!this.state.userEdit) {
      return (
        <View style={{ flex: 1, backgroundColor: "#f3f3f3" }}>
          {
            <SafeAreaView testID="calendarView" style={styles.container}>
              <ScrollView
                testID="calendarScrollView"
                refreshControl={
                  <RefreshControl
                    testID="calendarRefresh"
                    refreshing={this.state.calendarRefreshing}
                    onRefresh={this._onRefresh}
                  />
                }>
                <View style={styles.containerCalendar}>
                  <StatusBar
...
                  />
                </View>
              </ScrollView>
            </SafeAreaView>
          }
          <ActionButton
            testID="calendarMainButton"
            buttonColor="crimson"
            onPress={() => this.renderUserform()}>>
          </ActionButton>
        </View>
      );
    } else {
      return (
        <SafeAreaView testID="calendarAddView" style={styles.safeContainer}>
          <View style={styles.navBar}>
            <Text style={styles.navBarTitle}>Add to Calendar</Text>
          </View>
          <ScrollView
            testID="calendarAddScrollView"
            style={styles.scroll}
            contentContainerStyle={styles.contentContainer}
            keyboardShouldPersistTaps="handled">
            <View style={styles.inputContainer}>
            <Text style={{margin: 4, color: "black", textAlign: 'center'}}>
              Date:{this.state.tmpDate}
...
              flexDirection: "column",
              flex: 1,
              alignItems: "stretch",
              justifyContent: "center",
            }}>
              <TextButton
                testID="calendarAddButton"
                style={{ margin: 4 }}
                titleColor="white"
                color="black"
                title="add schedule"
                onPress={() => this.addSchedule()}
              />
              <TextButton
                testID="calendarGoBackButton"
                style={{ margin: 4 }}
                titleColor="white"
                color="black"
                title="go back"
                onPress={() => this.unrenderUserform()}
              />
...
