...
              potentialMatchesAdd={this.addPotentialMatches.bind(this)}
              waitingMatchesAdd={this.addWaitingMatches.bind(this)}
            />
          </TabNavigator.Item>

          <TabNavigator.Item
            testID="profileTab"
            selected={this.state.selectedTab === "profile"}
            title="Profile"
            selectedTitleStyle={{ color: "#3496f0" }}
            renderIcon={() => (
              <Icon name="user" size={px2dp(22)} color="#666" />
            )}
...
